exports[`ACME app > ACME app User login > Table Sort Test > can verify amounts are sorted in ascending order #0`] = `
<table id="transactionsTable" class="table table-padded">
  <thead>
    <tr>
      <th
        id="status"
        onclick="sortTable(0)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Status
      </th>
      <th
        id="date"
        onclick="sortTable(1)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Date
      </th>
      <th
        id="description"
        onclick="sortTable(2)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Description
      </th>
      <th
        id="category"
        onclick="sortTable(3)"
        class="text-center"
        onmouseover=""
        style="cursor: pointer;"
      >
        Category
      </th>
      <th
        id="amount"
        onclick="sortTable(4)"
        class="text-right"
        onmouseover=""
        style="cursor: pointer;"
      >
        Amount
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Yesterday</span><span class="smaller lighter">7:45am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company3.png" style="height: 25px;" /><span
          >MailChimp Services</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-warning" href="">Software</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 320.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Jan 7th</span><span class="smaller lighter">9:51am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company4.png" style="height: 25px;" /><span
          >Ebay Marketplace</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Ecommerce</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 244.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 23rd</span><span class="smaller lighter">2:7pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company6.png" style="height: 25px;" /><span
          >Shopify product</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Shopping</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 17.99 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 9th</span><span class="smaller lighter">7:45pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company7.png" style="height: 25px;" /><span>
          Templates Inc</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Business</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 340.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller red"></span><span>Declined</span>
      </td>
      <td><span>Jan 19th</span><span class="smaller lighter">3:22pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company2.png" style="height: 25px;" /><span
          >Stripe Payment Processing</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Finance</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 952.23 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Today</span><span class="smaller lighter">1:52am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company1.png" style="height: 25px;" /><span
          >Starbucks coffee</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-success" href="">Restaurant / Cafe</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 1,250.00 USD</span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ACME app > ACME app User login > Table Sort Test > can verify amounts are sorted in ascending order using snapshots #0`] = `
<table id="transactionsTable" class="table table-padded">
  <thead>
    <tr>
      <th
        id="status"
        onclick="sortTable(0)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Status
      </th>
      <th
        id="date"
        onclick="sortTable(1)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Date
      </th>
      <th
        id="description"
        onclick="sortTable(2)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Description
      </th>
      <th
        id="category"
        onclick="sortTable(3)"
        class="text-center"
        onmouseover=""
        style="cursor: pointer;"
      >
        Category
      </th>
      <th
        id="amount"
        onclick="sortTable(4)"
        class="text-right"
        onmouseover=""
        style="cursor: pointer;"
      >
        Amount
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Yesterday</span><span class="smaller lighter">7:45am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company3.png" style="height: 25px;" /><span
          >MailChimp Services</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-warning" href="">Software</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 320.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Jan 7th</span><span class="smaller lighter">9:51am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company4.png" style="height: 25px;" /><span
          >Ebay Marketplace</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Ecommerce</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 244.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 23rd</span><span class="smaller lighter">2:7pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company6.png" style="height: 25px;" /><span
          >Shopify product</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Shopping</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 17.99 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 9th</span><span class="smaller lighter">7:45pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company7.png" style="height: 25px;" /><span>
          Templates Inc</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Business</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 340.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller red"></span><span>Declined</span>
      </td>
      <td><span>Jan 19th</span><span class="smaller lighter">3:22pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company2.png" style="height: 25px;" /><span
          >Stripe Payment Processing</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Finance</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 952.23 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Today</span><span class="smaller lighter">1:52am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company1.png" style="height: 25px;" /><span
          >Starbucks coffee</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-success" href="">Restaurant / Cafe</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 1,250.00 USD</span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ACME app > ACME app User login > Table Sort Test > can confirm #0`] = `
<table id="transactionsTable" class="table table-padded">
  <thead>
    <tr>
      <th
        id="status"
        onclick="sortTable(0)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Status
      </th>
      <th
        id="date"
        onclick="sortTable(1)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Date
      </th>
      <th
        id="description"
        onclick="sortTable(2)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Description
      </th>
      <th
        id="category"
        onclick="sortTable(3)"
        class="text-center"
        onmouseover=""
        style="cursor: pointer;"
      >
        Category
      </th>
      <th
        id="amount"
        onclick="sortTable(4)"
        class="text-right"
        onmouseover=""
        style="cursor: pointer;"
      >
        Amount
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Yesterday</span><span class="smaller lighter">7:45am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company3.png" style="height: 25px;" /><span
          >MailChimp Services</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-warning" href="">Software</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 320.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Jan 7th</span><span class="smaller lighter">9:51am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company4.png" style="height: 25px;" /><span
          >Ebay Marketplace</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Ecommerce</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 244.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 23rd</span><span class="smaller lighter">2:7pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company6.png" style="height: 25px;" /><span
          >Shopify product</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Shopping</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 17.99 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 9th</span><span class="smaller lighter">7:45pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company7.png" style="height: 25px;" /><span>
          Templates Inc</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Business</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 340.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller red"></span><span>Declined</span>
      </td>
      <td><span>Jan 19th</span><span class="smaller lighter">3:22pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company2.png" style="height: 25px;" /><span
          >Stripe Payment Processing</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Finance</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 952.23 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Today</span><span class="smaller lighter">1:52am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company1.png" style="height: 25px;" /><span
          >Starbucks coffee</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-success" href="">Restaurant / Cafe</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 1,250.00 USD</span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ACME app > ACME app User login > Table Sort Test > can confirm amount details are correct and consistent over time #0`] = `
<table id="transactionsTable" class="table table-padded">
  <thead>
    <tr>
      <th
        id="status"
        onclick="sortTable(0)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Status
      </th>
      <th
        id="date"
        onclick="sortTable(1)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Date
      </th>
      <th
        id="description"
        onclick="sortTable(2)"
        onmouseover=""
        style="cursor: pointer;"
      >
        Description
      </th>
      <th
        id="category"
        onclick="sortTable(3)"
        class="text-center"
        onmouseover=""
        style="cursor: pointer;"
      >
        Category
      </th>
      <th
        id="amount"
        onclick="sortTable(4)"
        class="text-right"
        onmouseover=""
        style="cursor: pointer;"
      >
        Amount
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Yesterday</span><span class="smaller lighter">7:45am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company3.png" style="height: 25px;" /><span
          >MailChimp Services</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-warning" href="">Software</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 320.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Jan 7th</span><span class="smaller lighter">9:51am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company4.png" style="height: 25px;" /><span
          >Ebay Marketplace</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Ecommerce</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-danger">- 244.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 23rd</span><span class="smaller lighter">2:7pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company6.png" style="height: 25px;" /><span
          >Shopify product</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Shopping</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 17.99 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller yellow"></span><span>Pending</span>
      </td>
      <td><span>Jan 9th</span><span class="smaller lighter">7:45pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company7.png" style="height: 25px;" /><span>
          Templates Inc</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-primary" href="">Business</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 340.00 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller red"></span><span>Declined</span>
      </td>
      <td><span>Jan 19th</span><span class="smaller lighter">3:22pm</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company2.png" style="height: 25px;" /><span
          >Stripe Payment Processing</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-danger" href="">Finance</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 952.23 USD</span>
      </td>
    </tr>
    <tr>
      <td class="nowrap">
        <span class="status-pill smaller green"></span><span>Complete</span>
      </td>
      <td><span>Today</span><span class="smaller lighter">1:52am</span></td>
      <td class="cell-with-media">
        <img alt="" src="img/company1.png" style="height: 25px;" /><span
          >Starbucks coffee</span
        >
      </td>
      <td class="text-center">
        <a class="badge badge-success" href="">Restaurant / Cafe</a>
      </td>
      <td class="text-right bolder nowrap">
        <span class="text-success">+ 1,250.00 USD</span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ACME app > ACME app User login > Login Page UI Elements Test: > can get correct a snapshot of the login page #0`] = `
<div class="logo-w">
  <a href="index.html"><img alt="" src="img/logo-big.png"/></a>
</div>
`;

exports[`ACME app > ACME app User login > Login Page UI Elements Test: > can get correct a snapshot of the login page #1`] = `
[ {}, {} ]
`;

exports[`ACME app > ACME app User login > Login Page UI Elements Test: > can get correct a snapshot of the login page #2`] = `
<h4 class="auth-header">
  Login Form
</h4>
`;

exports[`ACME app > ACME app User login > Login Page UI Elements Test: > can get correct a snapshot of the logo section #0`] = `
<div class="logo-w">
  <a href="index.html"><img alt="" src="img/logo-big.png"/></a>
</div>
`;

exports[`ACME app > ACME app User login > Login Page UI Elements Test: > can get correct a snapshot of the form group #0`] = `
[ {}, {} ]
`;

exports[`ACME app > ACME app User login > Login Page UI Elements Test: > can get correct a snapshot of the auth header #0`] = `
<h4 class="auth-header">
  Login Form
</h4>
`;

exports[`ACME app > ACME app User login > Login Page UI Elements Test: > can get correct a snapshot of the button group #0`] = `
<div class="buttons-w">
  <button id="log-in" class="btn btn-primary">Log In</button>
  <div class="form-check-inline">
    <label class="form-check-label"
      ><input class="form-check-input" type="checkbox" />Remember Me</label
    >
  </div>
  <div style="text-align:center">
    <a href="#" style="display: inline-block; margin-bottom:4px;"
      ><img alt="" src="img/social-icons/twitter.png" style="width: 28px;"/></a
    ><a
      href="#"
      style="display: inline-block; margin-left: 30px;margin-right:30px;margin-top:20px;"
      ><img alt="" src="img/social-icons/facebook.png" style="width: 28px;"/></a
    ><a
      href="#"
      style="display: inline-block; margin-left: 30px;margin-right:30px;margin-top:20px;"
      ><img alt="" src="img/social-icons/linkedin.png" style="width: 28px;"
    /></a>
  </div>
</div>
`;

exports[`ACME app > ACME app User login > Data-Driven Test > cannot login user without password #0`] = `
<div
  id="random_id_3"
  class="alert alert-warning"
  role="alert"
  style="display: block;"
>
  Password must be present
</div>
`;

exports[`ACME app > ACME app User login > Data-Driven Test > cannot login user without both username and password #0`] = `
<div
  id="random_id_1"
  class="alert alert-warning"
  role="alert"
  style="display: block;"
>
  Both Username and Password must be present
</div>
`;

exports[`ACME app > ACME app User login > Data-Driven Test > cannot login user without username #0`] = `
<div
  id="random_id_7"
  class="alert alert-warning"
  role="alert"
  style="display: block;"
>
  Username must be present
</div>
`;

exports[`ACME app > ACME app User login > Dynamic Content Test > can verify the ad section is visible #0`] = `
<div class="element-balances">
  <div class="balance hidden-mobile" id="totalBalance" style="display: none;">
    <div class="balance-title">
      Total Balance
    </div>
    <div class="balance-value">
      <span>$350</span
      ><span class="trending trending-down-basic"
        ><span>%7</span><i class="os-icon os-icon-arrow-2-down"></i
      ></span>
    </div>
    <div class="balance-link">
      <a class="btn btn-link btn-underlined" href="#"
        ><span>View Statement</span><i class="os-icon os-icon-arrow-right4"></i
      ></a>
    </div>
  </div>
  <div class="balance hidden-mobile" id="flashSale" style="display: block;">
    <img alt="" src="img/flashSale.gif" style="width:129px;height:100px" />
  </div>
  <div class="balance" id="creditAvailable" style="display: none;">
    <div class="balance-title">
      Credit Available
    </div>
    <div class="balance-value">
      $17,800
    </div>
    <div class="balance-link">
      <a class="btn btn-link btn-underlined" href="#"
        ><span>Request Increase</span
        ><i class="os-icon os-icon-arrow-right4"></i
      ></a>
    </div>
  </div>
  <div class="balance hidden-mobile" id="flashSale2" style="display: block;">
    <img alt="" src="img/flashSale2.gif" style="width:140px;height:100px;" />
  </div>
  <div class="balance">
    <div class="balance-title">
      Due Today
    </div>
    <div class="balance-value danger">
      $180
    </div>
    <div class="balance-link">
      <a class="btn btn-link btn-underlined btn-gold" href="#"
        ><span>Pay Now</span><i class="os-icon os-icon-arrow-right4"></i
      ></a>
    </div>
  </div>
</div>
`;
